@@ -6,8 +6,10 @@ reportbug (4.10.3) UNRELEASED; urgency=low
       thanks to Éric Araujo for the report; Closes: #564447
     - wrap text to be 79 chars width in the editor; thanks to Mark Brown for
       the report; Closes: #562878
+    - fix focus stealing issues; thanks to Eduard Bloch for the report;
+      Closes: #564418
 
- -- Luca Bruno <lethalman88@gmail.com>  Sat, 30 Jan 2010 22:15:13 +0100
+ -- Luca Bruno <lethalman88@gmail.com>  Sat, 30 Jan 2010 22:19:36 +0100
 
 reportbug (4.10.2) unstable; urgency=low
 
